--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/sign_in_sign_up_img"
     tools:context=".signUp">
 
     <TextView
@@ -14,7 +15,9 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="250dp"
         android:layout_marginEnd="261dp"
+        android:fontFamily="@font/poppins_bold"
         android:text="@string/sign_up"
+        android:textColor="@color/secondaryDarkText"
         android:textSize="40sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,13 +27,17 @@
     <EditText
         android:id="@+id/etSignUpName"
         android:layout_width="360dp"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:layout_marginStart="25dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="25dp"
+        android:background="@drawable/text_field_bg_white"
         android:ems="10"
+        android:fontFamily="@font/poppins_light"
         android:hint="@string/name"
         android:inputType="text"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -38,13 +45,17 @@
     <EditText
         android:id="@+id/etSignUpEmail"
         android:layout_width="360dp"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="25dp"
+        android:background="@drawable/text_field_bg_white"
         android:ems="10"
+        android:fontFamily="@font/poppins_light"
         android:hint="@string/email"
-        android:inputType="text"
+        android:inputType="textEmailAddress"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etSignUpName" />
@@ -52,13 +63,17 @@
     <EditText
         android:id="@+id/etSignUpPassword"
         android:layout_width="360dp"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="25dp"
+        android:background="@drawable/text_field_bg_white"
         android:ems="10"
+        android:fontFamily="@font/poppins_light"
         android:hint="@string/password"
         android:inputType="textPassword"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etSignUpEmail" />
@@ -66,13 +81,17 @@
     <EditText
         android:id="@+id/etSignUpCPassword"
         android:layout_width="360dp"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:layout_marginStart="25dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="25dp"
+        android:background="@drawable/text_field_bg_white"
         android:ems="10"
+        android:fontFamily="@font/poppins_light"
         android:hint="Confirm Password"
         android:inputType="textPassword"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etSignUpPassword" />
@@ -80,11 +99,15 @@
     <Button
         android:id="@+id/btnSignUp"
         android:layout_width="360dp"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:layout_marginStart="25dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="25dp"
+        android:background="@drawable/btn_mid_rounded_primary"
+        android:fontFamily="@font/poppins_semibold"
         android:text="@string/sign_up"
+        android:textColor="@color/btnText"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etSignUpCPassword" />
@@ -120,19 +143,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
+        android:fontFamily="@font/poppins_semibold"
         android:text="Already have a account? "
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/tvSignIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="131dp"
+        android:layout_marginTop="50dp"
+        android:fontFamily="@font/poppins_semibold"
         android:text="@string/sign_in"
+        android:textColor="@color/whiteText"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView6"
         app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />
 
