--- a/app/src/main/res/layout/fragment_profile_set_calorie_goal.xml
+++ b/app/src/main/res/layout/fragment_profile_set_calorie_goal.xml
@@ -22,7 +22,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Goal Set"
+        android:textColor="@color/primaryText"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/imageView41"
@@ -54,7 +56,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="DAILY CALORIE INTAKE: "
+        android:textColor="@color/primaryText"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/imageView41"
@@ -65,9 +69,11 @@
         android:layout_width="200dp"
         android:layout_height="30dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/rectangle_shape"
+        android:background="@drawable/rectangle_thin_stroke_shape"
         android:ems="10"
+        android:fontFamily="@font/outfit_semi_bold"
         android:inputType="text"
+        android:textColor="@color/primaryText"
         app:layout_constraintEnd_toEndOf="@+id/imageView41"
         app:layout_constraintHorizontal_bias="0.20"
         app:layout_constraintStart_toStartOf="@+id/imageView41"
@@ -78,7 +84,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Kcal"
+        android:textColor="@color/secondaryText"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView41"
         app:layout_constraintHorizontal_bias="0.1"
@@ -92,6 +100,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:text="WEEKLY CALORIE INTAKE:"
+        android:textColor="@color/primaryText"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/imageView41"
@@ -102,9 +111,11 @@
         android:layout_width="200dp"
         android:layout_height="30dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/rectangle_shape"
+        android:background="@drawable/rectangle_thin_stroke_shape"
         android:ems="10"
+        android:fontFamily="@font/outfit_semi_bold"
         android:inputType="text"
+        android:textColor="@color/primaryText"
         app:layout_constraintEnd_toEndOf="@+id/imageView41"
         app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="@+id/imageView41"
@@ -114,7 +125,10 @@
         android:id="@+id/textView82"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Kcal"
+        android:textColor="@color/secondaryText"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView41"
         app:layout_constraintHorizontal_bias="0.1"
@@ -126,7 +140,10 @@
         android:layout_width="180dp"
         android:layout_height="35dp"
         android:layout_marginTop="10dp"
+        android:background="@drawable/btn_mid_rounded_primary"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Set Goal"
+        android:textColor="@color/btnText"
         app:layout_constraintEnd_toEndOf="@+id/imageView41"
         app:layout_constraintStart_toStartOf="@+id/imageView41"
         app:layout_constraintTop_toBottomOf="@+id/editTextText6" />
@@ -135,7 +152,10 @@
         android:id="@+id/button11"
         android:layout_width="180dp"
         android:layout_height="35dp"
+        android:background="@drawable/btn_mid_rounded_red"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Cancel"
+        android:textColor="@color/btnCancelColor"
         app:layout_constraintEnd_toEndOf="@+id/imageView41"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="@+id/imageView41"
@@ -147,7 +167,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="DAILY CALORIES"
+        android:textColor="@color/primaryText"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@+id/imageView42"
         app:layout_constraintTop_toTopOf="@+id/imageView42" />
@@ -158,7 +180,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="WEEKLY CALORIES"
+        android:textColor="@color/primaryText"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@+id/imageView45"
         app:layout_constraintTop_toTopOf="@+id/imageView45" />
@@ -167,7 +191,9 @@
         android:id="@+id/textView94"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="4,000"
+        android:textColor="@color/secondaryText"
         android:textSize="32sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageView42"
@@ -178,7 +204,9 @@
         android:id="@+id/textView96"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="4,000"
+        android:textColor="@color/secondaryText"
         android:textSize="32sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageView45"
