--- a/app/src/main/res/layout/fragment_profile_water.xml
+++ b/app/src/main/res/layout/fragment_profile_water.xml
@@ -12,7 +12,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="This week's progress"
+        android:textColor="@color/primaryText"
         android:textSize="26dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +38,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Total Water Intake"
+        android:textColor="@color/tertiaryText"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView37" />
@@ -46,7 +50,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="5,250"
+        android:textColor="@color/primaryText"
         android:textSize="26sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,7 +63,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="13dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="ml"
+        android:textColor="@color/tertiaryText"
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/textView39"
         app:layout_constraintTop_toTopOf="@+id/textView39" />
@@ -98,7 +106,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Goal"
+        android:textColor="@color/primaryText"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/imageView25"
@@ -119,7 +129,10 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:background="@drawable/btn_mid_rounded_primary"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Set Goal"
+        android:textColor="@color/btnText"
         app:layout_constraintEnd_toEndOf="@+id/imageView25"
         app:layout_constraintStart_toStartOf="@+id/imageView25"
         app:layout_constraintTop_toBottomOf="@+id/imageView26" />
@@ -130,7 +143,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Daily Water"
+        android:textColor="@color/primaryText"
         app:layout_constraintStart_toStartOf="@+id/imageView26"
         app:layout_constraintTop_toTopOf="@+id/imageView26" />
 
@@ -138,7 +153,9 @@
         android:id="@+id/textView43"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="2,000"
+        android:textColor="@color/secondaryText"
         android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView26"
         app:layout_constraintStart_toStartOf="@+id/imageView26"
@@ -150,7 +167,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Weekly Water"
+        android:textColor="@color/primaryText"
         app:layout_constraintStart_toStartOf="@+id/imageView28"
         app:layout_constraintTop_toTopOf="@+id/imageView28" />
 
@@ -158,7 +177,9 @@
         android:id="@+id/textView45"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="14,000"
+        android:textColor="@color/secondaryText"
         android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView28"
         app:layout_constraintStart_toStartOf="@+id/imageView28"
