--- a/app/src/main/res/layout/fragment_start_activity.xml
+++ b/app/src/main/res/layout/fragment_start_activity.xml
@@ -31,7 +31,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="New Activity"
+        android:textColor="@color/primaryText"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/imageView51"
@@ -41,7 +43,9 @@
         android:id="@+id/textView101"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Running"
+        android:textColor="@color/tertiaryText"
         android:textSize="13sp"
         app:layout_constraintStart_toEndOf="@+id/imageView51"
         app:layout_constraintTop_toBottomOf="@+id/textView100" />
@@ -62,7 +66,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Time Start:"
+        android:textColor="@color/tertiaryText"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/imageView53"
         app:layout_constraintTop_toBottomOf="@+id/textView101" />
@@ -72,7 +78,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="8:00 am"
+        android:textColor="@color/secondaryText"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/imageView53"
@@ -94,7 +102,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Set Goal"
+        android:textColor="@color/tertiaryText"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/imageView54"
         app:layout_constraintTop_toBottomOf="@+id/textView101" />
@@ -104,7 +114,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="02"
+        android:textColor="@color/secondaryText"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/imageView54"
@@ -115,7 +127,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="hr/s"
+        android:textColor="@color/secondaryText"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView109"
@@ -169,10 +183,12 @@
         android:layout_height="35dp"
         android:layout_marginStart="74dp"
         android:layout_marginTop="20dp"
-        android:backgroundTint="@color/primary"
+        android:background="@drawable/btn_rounded_primary"
         android:backgroundTintMode="screen"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Start"
         android:textAlignment="center"
+        android:textColor="@color/btnText"
         app:layout_constraintStart_toStartOf="@+id/imageView50"
         app:layout_constraintTop_toBottomOf="@+id/imageView53" />
 
@@ -181,7 +197,10 @@
         android:layout_width="100dp"
         android:layout_height="35dp"
         android:layout_marginTop="20dp"
+        android:background="@drawable/btn_rounded_red"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Cancel"
+        android:textColor="@color/btnCancelColor"
         app:layout_constraintEnd_toEndOf="@+id/imageView50"
         app:layout_constraintHorizontal_bias="0.12"
         app:layout_constraintStart_toEndOf="@+id/button14"
