--- a/app/src/main/res/drawable/back_tabs.xml
+++ b/app/src/main/res/drawable/back_tabs.xml
@@ -2,15 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <gradient
-                android:angle="0"
-                android:startColor="#FFFFFF"
-                android:endColor="#FFFFFF"/>
-            <corners
-                android:radius="10dp"/>
-            <stroke
-                android:width="1dp"
-                android:color="@android:color/darker_gray"/>
+            <solid android:color="@color/backTabsColor"/>
+            <corners android:radius="10dp"/>
         </shape>
     </item>
 </selector>
