--- a/app/src/main/res/drawable/bottom_nav_menu.xml
+++ b/app/src/main/res/drawable/bottom_nav_menu.xml
@@ -1,11 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/nav_home"
+        android:id="@+id/nav_dashboard"
         android:icon="@drawable/home_icon"
         android:title="Home" />
-
     <item
-        android:id="@+id/nav_search"
+        android:id="@+id/nav_activity"
         android:icon="@drawable/activity_icon"
         android:title="Activty" />
 
