--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/sign_in_sign_up_img"
     tools:context=".signIn">
 
     <TextView
@@ -14,7 +15,9 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="250dp"
         android:layout_marginEnd="261dp"
+        android:fontFamily="@font/poppins_bold"
         android:text="@string/sign_in"
+        android:textColor="@color/secondaryDarkText"
         android:textSize="40dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,13 +27,18 @@
     <EditText
         android:id="@+id/etSignInEmail"
         android:layout_width="360dp"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:layout_marginStart="25dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="26dp"
+        android:background="@drawable/text_field_bg_white"
         android:ems="10"
+        android:fontFamily="@font/poppins_light"
         android:hint="@string/email"
-        android:inputType="text"
+        android:inputType="textEmailAddress"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -38,13 +46,18 @@
     <EditText
         android:id="@+id/etSignInPassword"
         android:layout_width="360dp"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:layout_marginStart="25dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="26dp"
+        android:background="@drawable/text_field_bg_white"
         android:ems="10"
+        android:fontFamily="@font/poppins_light"
         android:hint="@string/password"
         android:inputType="text"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etSignInEmail" />
@@ -53,11 +66,14 @@
         android:id="@+id/tvForgotPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="288dp"
+        android:fontFamily="@font/poppins_semibold"
         android:text="@string/forgot_password"
-        android:textSize="12dp"
+        android:textColor="@color/tertiaryText"
+        android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etSignInPassword" />
@@ -65,11 +81,15 @@
     <Button
         android:id="@+id/btnSignIn"
         android:layout_width="360dp"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:layout_marginStart="29dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="22dp"
+        android:background="@drawable/btn_mid_rounded_primary"
+        android:fontFamily="@font/poppins_semibold"
         android:text="@string/sign_in"
+        android:textColor="@color/btnText"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />
@@ -79,9 +99,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="111dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="200dp"
         android:layout_marginEnd="4dp"
+        android:fontFamily="@font/poppins_semibold"
         android:text="@string/don_t_have_an_account"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/tvSignUp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />
@@ -91,9 +114,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="200dp"
         android:layout_marginEnd="105dp"
+        android:fontFamily="@font/poppins_semibold"
         android:text="@string/sign_up"
+        android:textColor="@color/whiteText"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />
