--- a/app/src/main/res/layout/fragment_profile_set_sleep_goal.xml
+++ b/app/src/main/res/layout/fragment_profile_set_sleep_goal.xml
@@ -22,7 +22,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Goal Set"
+        android:textColor="@color/primaryText"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/imageView46"
@@ -54,7 +56,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="DAILY SLEEP HOURS: "
+        android:textColor="@color/primaryText"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/imageView46"
@@ -67,7 +71,9 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/rectangle_thin_stroke_shape"
         android:ems="10"
+        android:fontFamily="@font/outfit_semi_bold"
         android:inputType="text"
+        android:textColor="@color/primaryText"
         app:layout_constraintEnd_toEndOf="@+id/imageView46"
         app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="@+id/imageView46"
@@ -79,7 +85,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="WEEK SLEEP HOURS:"
+        android:textColor="@color/primaryText"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/imageView46"
@@ -92,7 +100,9 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/rectangle_thin_stroke_shape"
         android:ems="10"
+        android:fontFamily="@font/outfit_semi_bold"
         android:inputType="text"
+        android:textColor="@color/primaryText"
         app:layout_constraintEnd_toEndOf="@+id/imageView46"
         app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="@+id/imageView46"
@@ -103,7 +113,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="hours"
+        android:textColor="@color/secondaryText"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView46"
         app:layout_constraintHorizontal_bias="0.1"
@@ -114,7 +126,9 @@
         android:id="@+id/textView87"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="hours"
+        android:textColor="@color/secondaryText"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView46"
         app:layout_constraintHorizontal_bias="0.1"
@@ -126,7 +140,10 @@
         android:layout_width="180dp"
         android:layout_height="35dp"
         android:layout_marginTop="10dp"
+        android:background="@drawable/btn_mid_rounded_primary"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Set Goal"
+        android:textColor="@color/btnText"
         app:layout_constraintEnd_toEndOf="@+id/imageView46"
         app:layout_constraintStart_toStartOf="@+id/imageView46"
         app:layout_constraintTop_toBottomOf="@+id/editTextText8" />
@@ -135,7 +152,9 @@
         android:id="@+id/button13"
         android:layout_width="180dp"
         android:layout_height="35dp"
+        android:background="@drawable/btn_mid_rounded_red"
         android:text="Cancel"
+        android:textColor="@color/btnCancelColor"
         app:layout_constraintEnd_toEndOf="@+id/imageView46"
         app:layout_constraintStart_toStartOf="@+id/imageView46"
         app:layout_constraintTop_toBottomOf="@+id/button12" />
@@ -146,7 +165,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="DAILY HOURS"
+        android:textColor="@color/primaryText"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@+id/imageView47"
         app:layout_constraintTop_toTopOf="@+id/imageView47" />
@@ -157,7 +178,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="WEEKLY HOURS"
+        android:textColor="@color/primaryText"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@+id/imageView48"
         app:layout_constraintTop_toTopOf="@+id/imageView48" />
@@ -166,7 +189,9 @@
         android:id="@+id/textView90"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="4,000"
+        android:textColor="@color/secondaryText"
         android:textSize="32sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageView47"
@@ -177,7 +202,9 @@
         android:id="@+id/textView91"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="4,000"
+        android:textColor="@color/secondaryText"
         android:textSize="32sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageView48"
