--- a/app/src/main/res/layout/fragment_profile_set_steps_goal.xml
+++ b/app/src/main/res/layout/fragment_profile_set_steps_goal.xml
@@ -22,7 +22,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Goal Set"
+        android:textColor="@color/primaryText"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/imageView35"
@@ -54,7 +56,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="DAILY STEPS"
+        android:textColor="@color/primaryText"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@+id/imageView38"
         app:layout_constraintTop_toTopOf="@+id/imageView38" />
@@ -63,7 +67,9 @@
         android:id="@+id/textView66"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="4,000"
+        android:textColor="@color/secondaryText"
         android:textSize="32sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageView38"
@@ -76,7 +82,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="WEEKLY STEPS"
+        android:textColor="@color/primaryText"
         app:layout_constraintStart_toStartOf="@+id/imageView39"
         app:layout_constraintTop_toTopOf="@+id/imageView39" />
 
@@ -84,7 +92,9 @@
         android:id="@+id/textView68"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="28,000"
+        android:textColor="@color/secondaryText"
         android:textSize="32sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageView39"
@@ -97,7 +107,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="DAILY STEPS"
+        android:textColor="@color/primaryText"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="@+id/imageView35"
         app:layout_constraintTop_toBottomOf="@+id/imageView38" />
@@ -109,7 +121,9 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/rectangle_thin_stroke_shape"
         android:ems="10"
+        android:fontFamily="@font/outfit_semi_bold"
         android:inputType="text"
+        android:textColor="@color/primaryText"
         app:layout_constraintEnd_toEndOf="@+id/imageView35"
         app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="@+id/imageView35"
@@ -120,7 +134,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="steps"
+        android:textColor="@color/secondaryText"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView35"
         app:layout_constraintHorizontal_bias="0.1"
@@ -133,7 +149,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="WEEKLY STEPS"
+        android:textColor="@color/primaryText"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="@+id/imageView35"
         app:layout_constraintTop_toBottomOf="@+id/editTextText" />
@@ -145,7 +163,9 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/rectangle_thin_stroke_shape"
         android:ems="10"
+        android:fontFamily="@font/outfit_semi_bold"
         android:inputType="text"
+        android:textColor="@color/primaryText"
         app:layout_constraintEnd_toEndOf="@+id/imageView35"
         app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="@+id/imageView35"
@@ -156,7 +176,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="steps"
+        android:textColor="@color/secondaryText"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView35"
         app:layout_constraintHorizontal_bias="0.10"
@@ -168,7 +190,10 @@
         android:layout_width="180dp"
         android:layout_height="35dp"
         android:layout_marginTop="10dp"
+        android:background="@drawable/btn_mid_rounded_primary"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Set Goal"
+        android:textColor="@color/btnText"
         app:layout_constraintEnd_toEndOf="@+id/imageView35"
         app:layout_constraintStart_toStartOf="@+id/imageView35"
         app:layout_constraintTop_toBottomOf="@+id/editTextText2" />
@@ -178,7 +203,10 @@
         android:layout_width="180dp"
         android:layout_height="35dp"
         android:layout_marginTop="10dp"
+        android:background="@drawable/btn_mid_rounded_red"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Cancel"
+        android:textColor="@color/btnCancelColor"
         app:layout_constraintEnd_toEndOf="@+id/imageView35"
         app:layout_constraintStart_toStartOf="@+id/imageView35"
         app:layout_constraintTop_toBottomOf="@+id/button6" />
