--- a/app/src/main/res/layout/fragment_profile_set_water_goal.xml
+++ b/app/src/main/res/layout/fragment_profile_set_water_goal.xml
@@ -22,7 +22,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Goal Set"
+        android:textColor="@color/primaryText"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/imageView40"
@@ -54,7 +56,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="DAILY WATER INTAKE: "
+        android:textColor="@color/primaryText"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/imageView40"
@@ -65,8 +69,9 @@
         android:layout_width="200dp"
         android:layout_height="30dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/rectangle_shape"
+        android:background="@drawable/rectangle_thin_stroke_shape"
         android:ems="10"
+        android:fontFamily="@font/outfit_semi_bold"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="@+id/imageView40"
         app:layout_constraintHorizontal_bias="0.2"
@@ -78,7 +83,9 @@
         android:layout_width="31dp"
         android:layout_height="35dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="ml"
+        android:textColor="@color/secondaryText"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView40"
         app:layout_constraintHorizontal_bias="0.1"
@@ -90,8 +97,9 @@
         android:layout_width="200dp"
         android:layout_height="30dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/rectangle_shape"
+        android:background="@drawable/rectangle_thin_stroke_shape"
         android:ems="10"
+        android:fontFamily="@font/outfit_semi_bold"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="@+id/imageView40"
         app:layout_constraintHorizontal_bias="0.2"
@@ -104,7 +112,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="WEEKLY WATER INTAKE:"
+        android:textColor="@color/primaryText"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/imageView40"
@@ -115,7 +125,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="ml"
+        android:textColor="@color/secondaryText"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView40"
         app:layout_constraintHorizontal_bias="0.1"
@@ -127,7 +139,10 @@
         android:layout_width="180dp"
         android:layout_height="35dp"
         android:layout_marginTop="10dp"
+        android:background="@drawable/btn_mid_rounded_primary"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Set Goal"
+        android:textColor="@color/btnText"
         app:layout_constraintEnd_toEndOf="@+id/imageView40"
         app:layout_constraintStart_toStartOf="@+id/imageView40"
         app:layout_constraintTop_toBottomOf="@+id/editTextText4" />
@@ -137,7 +152,10 @@
         android:layout_width="180dp"
         android:layout_height="35dp"
         android:layout_marginTop="10dp"
+        android:background="@drawable/btn_mid_rounded_red"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Cancel"
+        android:textColor="@color/btnCancelColor"
         app:layout_constraintEnd_toEndOf="@+id/imageView40"
         app:layout_constraintStart_toStartOf="@+id/imageView40"
         app:layout_constraintTop_toBottomOf="@+id/button7" />
@@ -148,7 +166,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="DAILY ML"
+        android:textColor="@color/primaryText"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@+id/imageView43"
         app:layout_constraintTop_toTopOf="@+id/imageView43" />
@@ -159,7 +179,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="WEEKLY ML"
+        android:textColor="@color/primaryText"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@+id/imageView44"
         app:layout_constraintTop_toTopOf="@+id/imageView44" />
@@ -168,7 +190,9 @@
         android:id="@+id/textView98"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="4,000"
+        android:textColor="@color/secondaryText"
         android:textSize="32sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageView43"
@@ -179,7 +203,9 @@
         android:id="@+id/textView99"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="3,000"
+        android:textColor="@color/secondaryText"
         android:textSize="32sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageView44"
